--- a/src/components/componies/index.scss
+++ b/src/components/componies/index.scss
@@ -6,7 +6,7 @@
 @media (max-width: 899px) {
 
     .navbar {
-   
+
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -17,9 +17,10 @@
 
 
         .nav_logo {
-            padding-left:10%;
+            padding-left: 10%;
             padding-top: 0.7%;
-            padding-bottom: 0.7%;;
+            padding-bottom: 0.7%;
+            ;
             font-size: 1.5rem;
             font-weight: 600;
             color: #f3f4f6;
@@ -51,7 +52,7 @@
         position: relative;
         top: 200px;
         font-family: "Poppins", sans-serif;
-        
+
 
         .flyCompanies-container__box-info {
             display: grid;
@@ -74,10 +75,10 @@
                 padding: 20px;
                 grid-template-columns: 25% 50% 25%;
                 margin: auto;
-                grid-template-areas:             
-                        "A B C"
-                        ". . D";
-                
+                grid-template-areas:
+                    "A B C"
+                    ". . D";
+
 
                 .flyCompanies-container__box-info-top-p {
                     cursor: pointer;
@@ -90,7 +91,7 @@
                     width: 60%;
                     min-height: 55%;
                     max-height: 65%;
-                    
+
 
                     &:hover {
                         background: #536aa0;
@@ -105,16 +106,16 @@
                     justify-content: center;
                     gap: 6%;
 
-                    .fa-chevron-right{
+                    .fa-chevron-right {
                         color: rgb(240, 90, 40);
                         border: 1px solid rgb(240, 90, 40);
                         padding: 11px 15px;
                         border-radius: 100%;
                     }
 
-                    h3{
+                    h3 {
                         width: 47%;
-                        
+
                     }
                 }
 
@@ -128,7 +129,8 @@
                     .flyCompanies-container__box-info__date-depp {
                         display: grid;
                         font-size: 15px;
-                        p{
+
+                        p {
                             font-weight: bold;
                             margin-bottom: 0px !important;
                         }
@@ -137,14 +139,16 @@
                     .flyCompanies-container__box-info__date-return {
                         display: grid;
                         font-size: 15px;
-                        p{
+
+                        p {
                             font-weight: bold;
                             margin-bottom: 0px !important;
                         }
                     }
                 }
-                
+
             }
+
             .flyCompanies-container__box-info-bottom {
                 text-align: end;
                 padding-top: 3px;
@@ -156,7 +160,7 @@
                 border-top: 1px dashed rgb(184, 184, 184);
                 height: auto;
             }
-            
+
         }
 
         .flyCompanies-container-content {
@@ -187,7 +191,7 @@
                         background: rgb(243, 246, 248);
                     }
                 }
-                
+
 
             }
 
@@ -209,7 +213,7 @@
 @media (min-width: 900px) and (max-width: 1023px) {
 
     .navbar {
-   
+
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -220,9 +224,10 @@
 
 
         .nav_logo {
-            padding-left:10%;
+            padding-left: 10%;
             padding-top: 0.7%;
-            padding-bottom: 0.7%;;
+            padding-bottom: 0.7%;
+            ;
             font-size: 1.5rem;
             font-weight: 600;
             color: #f3f4f6;
@@ -254,7 +259,7 @@
         position: relative;
         top: 200px;
         font-family: "Poppins", sans-serif;
-        
+
 
         .flyCompanies-container__box-info {
             display: grid;
@@ -277,10 +282,10 @@
                 padding: 15px;
                 grid-template-columns: 20% 55% 25%;
                 margin: auto;
-                grid-template-areas:             
-                        "A B C";
-                
-                .flyCompanies-container__box-info-top-div{
+                grid-template-areas:
+                    "A B C";
+
+                .flyCompanies-container__box-info-top-div {
 
                     .flyCompanies-container__box-info-top-p {
                         cursor: pointer;
@@ -292,15 +297,15 @@
                         border-radius: 5px;
                         height: auto;
                         width: 100%;
-                        
+
 
                         &:hover {
                             background: #536aa0;
                         }
                     }
-                    
+
                 }
-                    
+
 
                 .flyCompanies-container__box-info-city {
                     grid-area: B;
@@ -309,7 +314,7 @@
                     align-items: center;
                     justify-content: center;
 
-                    .fa-chevron-right{
+                    .fa-chevron-right {
                         color: rgb(240, 90, 40);
                         border: 1px solid rgb(240, 90, 40);
                         padding: 11px 15px;
@@ -317,7 +322,7 @@
                         text-align: center;
                     }
 
-                    h3{
+                    h3 {
                         width: 47%;
                         text-align: center;
                         font-size: 20px;
@@ -334,7 +339,8 @@
                     .flyCompanies-container__box-info__date-depp {
                         display: grid;
                         font-size: 15px;
-                        p{
+
+                        p {
                             font-weight: bold;
                             margin-bottom: 0px !important;
                         }
@@ -343,14 +349,16 @@
                     .flyCompanies-container__box-info__date-return {
                         display: grid;
                         font-size: 15px;
-                        p{
+
+                        p {
                             font-weight: bold;
                             margin-bottom: 0px !important;
                         }
                     }
                 }
-                
+
             }
+
             .flyCompanies-container__box-info-bottom {
                 text-align: end;
                 padding-top: 3px;
@@ -362,7 +370,7 @@
                 border-top: 1px dashed rgb(184, 184, 184);
                 height: auto;
             }
-            
+
         }
 
         .flyCompanies-container-content {
@@ -393,7 +401,7 @@
                         background: rgb(243, 246, 248);
                     }
                 }
-                
+
 
             }
 
@@ -415,7 +423,7 @@
 @media (min-width: 1024px) {
 
     .navbar {
-   
+
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -426,9 +434,10 @@
 
 
         .nav_logo {
-            padding-left:10%;
+            padding-left: 10%;
             padding-top: 0.7%;
-            padding-bottom: 0.7%;;
+            padding-bottom: 0.7%;
+            ;
             font-size: 1.5rem;
             font-weight: 600;
             color: #f3f4f6;
@@ -460,7 +469,7 @@
         position: relative;
         top: 200px;
         font-family: "Poppins", sans-serif;
-        
+
 
         .flyCompanies-container__box-info {
             display: grid;
@@ -483,10 +492,10 @@
                 padding: 20px;
                 grid-template-columns: 25% 50% 25%;
                 margin: auto;
-                grid-template-areas:             
-                        "A B C"
-                        ". . D";
-                
+                grid-template-areas:
+                    "A B C"
+                    ". . D";
+
 
                 .flyCompanies-container__box-info-top-p {
                     cursor: pointer;
@@ -499,7 +508,7 @@
                     width: 60%;
                     min-height: 55%;
                     max-height: 65%;
-                    
+
 
                     &:hover {
                         background: #536aa0;
@@ -514,16 +523,16 @@
                     justify-content: center;
                     gap: 6%;
 
-                    .fa-chevron-right{
+                    .fa-chevron-right {
                         color: rgb(240, 90, 40);
                         border: 1px solid rgb(240, 90, 40);
                         padding: 11px 15px;
                         border-radius: 100%;
                     }
 
-                    h3{
+                    h3 {
                         width: 47%;
-                        
+
                     }
                 }
 
@@ -537,7 +546,8 @@
                     .flyCompanies-container__box-info__date-depp {
                         display: grid;
                         font-size: 15px;
-                        p{
+
+                        p {
                             font-weight: bold;
                             margin-bottom: 0px !important;
                         }
@@ -546,14 +556,16 @@
                     .flyCompanies-container__box-info__date-return {
                         display: grid;
                         font-size: 15px;
-                        p{
+
+                        p {
                             font-weight: bold;
                             margin-bottom: 0px !important;
                         }
                     }
                 }
-                
+
             }
+
             .flyCompanies-container__box-info-bottom {
                 text-align: end;
                 padding-top: 3px;
@@ -565,7 +577,7 @@
                 border-top: 1px dashed rgb(184, 184, 184);
                 height: auto;
             }
-            
+
         }
 
         .flyCompanies-container-content {
@@ -596,7 +608,7 @@
                         background: rgb(243, 246, 248);
                     }
                 }
-                
+
 
             }
 
