--- a/src/components/content/shoppingSummary/index.scss
+++ b/src/components/content/shoppingSummary/index.scss
@@ -1,39 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 
 .navbar {
-        font-family: "Poppins", sans-serif;
-   
+    font-family: "Poppins", sans-serif;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    background: #2c3855;
+    box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
+
+
+    .nav_logo {
+        padding-left: 10%;
+        padding-top: 0.7%;
+        padding-bottom: 0.7%;
+        ;
+        font-size: 1.5rem;
+        font-weight: 600;
+        color: #f3f4f6;
+    }
+
+    img {
+        width: 300px;
+        height: 100px;
+        cursor: pointer;
+    }
+
+    .nav_links {
+        padding-right: 10%;
+        list-style: none;
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        background: #2c3855;
-        box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
-
-
-        .nav_logo {
-            padding-left:10%;
-            padding-top: 0.7%;
-            padding-bottom: 0.7%;;
-            font-size: 1.5rem;
-            font-weight: 600;
-            color: #f3f4f6;
-        }
-
-        img {
-            width: 300px;
-            height: 100px;
-            cursor: pointer;
-        }
-
-        .nav_links {
-            padding-right: 10%;
-            list-style: none;
-            display: flex;
-            align-items: center;
-            gap: 2rem;
-            padding-top: 15px;
-        }
+        gap: 2rem;
+        padding-top: 15px;
+    }
 
 }
 
@@ -51,7 +52,7 @@
             width: 100%;
             background: #2c3855;
             box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
-    
+
 
             img {
                 width: 300px;
@@ -64,11 +65,11 @@
             display: flex;
             justify-content: center;
             margin-top: 20px;
-            
+
 
             h3 {
                 padding: 20px;
-                
+
             }
         }
     }
@@ -80,12 +81,13 @@
         flex-direction: column;
         background: rgb(255, 255, 255);
         height: 70vh;
-        
+
 
         h5 {
             cursor: pointer;
             margin-top: 50px;
-            color: #3d465c;;
+            color: #3d465c;
+            ;
 
             &:hover {
                 color: #c6a74b;
@@ -114,7 +116,7 @@
             padding: 20px;
             color: #3d465c;
             font-weight: 400;
-            
+
 
             p {
                 font-size: 25px;
@@ -130,10 +132,20 @@
             border-radius: 10px;
             margin-bottom: 10px;
 
+            .passenger-seat {
+                display: flex;
+                gap: 20px;
+
+                .passenger-seat__info {
+                    display: flex;
+                    gap: 20px;
+                }
+            }
+
             .shoppingSummary-container-box__list-name {
                 display: flex;
 
-                
+
 
                 .name {
                     display: flex;
@@ -143,7 +155,7 @@
                     padding-inline: 10px;
                     padding-top: 15px;
 
-                    .passenger-name{
+                    .passenger-name {
                         font-weight: 500;
                         color: #3d465c;
                     }
@@ -152,7 +164,7 @@
                         display: flex;
                         gap: 20px;
                         font-size: 18px;
-          
+
                     }
                 }
             }
@@ -168,7 +180,7 @@
                     padding-inline: 10px;
                     padding-top: 15px;
 
-                    .passenger-name{
+                    .passenger-name {
                         font-weight: 500;
                         color: #3d465c;
                     }
@@ -192,7 +204,7 @@
             font-weight: 500;
             padding-inline: 10px;
             padding-top: 15px;
-            
+
 
             .shoppingSummary-container-box__list-passengerInfo {
                 display: flex;
