--- a/src/components/content/shoppingSummary/index.scss
+++ b/src/components/content/shoppingSummary/index.scss
@@ -380,7 +380,8 @@
             justify-content: center;
             flex-direction: column;
             background: rgb(255, 255, 255);
-            height: 70vh;
+            min-height: 70vh;
+            margin: 100px 0px;
             
     
             h5 {
@@ -402,81 +403,132 @@
             height: auto;
             padding: 20px;
             width: 80%;
+            box-sizing: border-box;
             background: rgb(255, 255, 255);
             box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
             border-radius: 30px;
     
     
             .shoppingSummary-container-box__list-top {
-                display: flex;
+                display: grid;
                 align-items: center;
+                width: 90%;
+                height: 150px;
                 justify-content: center;
-                gap: 60px;
-                padding: 20px;
                 color: #3d465c;
-                font-weight: 400;
+                grid-template-columns: 15% 10% 15% 45% 15%;
+                grid-template-rows: 25% 50% 25%;
+                grid-template-areas:
+                    "a . c x d "
+                    ". . c x d "
+                    "b e e e . ";
                 
     
+                .list-top-a{
+                    grid-area: a;
+                    font-weight: bold;
+                }
+                .list-top-b{
+                    grid-area: b;
+                    color: rgb(173, 176, 181);
+                }
+                .list-top-c{
+                    grid-area: c;
+                    color: rgb(173, 176, 181);
+                }
+                .list-top-d{
+                    grid-area: d;
+                    color: rgb(173, 176, 181);
+                }
+                .list-top-e{
+                    grid-area: e;
+                    font-weight: bold;
+                }
+                .list-top-x{
+                    grid-area: x;
+                    width: 100%;
+                }
                 p {
-                    font-size: 25px;
+                    text-align: center;
+                    font-size: 23px;
                 }
             }
     
             .shoppingSummary-container-box__list-bottom {
-                display: flex;
+                display: grid;
                 background: rgb(243, 243, 243);
                 width: 100%;
                 align-items: center;
-                justify-content: space-around;
                 border-radius: 10px;
                 margin-bottom: 10px;
+                grid-template-columns: 50% 50%;
+                border:1px solid rgba(202,208,219,0.4);
     
                 .shoppingSummary-container-box__list-name {
-                    display: flex;
-    
-                    
+                    width: 100%;
     
                     .name {
-                        display: flex;
-                        flex-direction: column;
                         font-size: 18px;
                         font-weight: 400;
-                        padding-inline: 10px;
-                        padding-top: 15px;
-    
-                        .passenger-name{
-                            font-weight: 500;
-                            color: #3d465c;
-                        }
     
                         .name-flex {
                             display: flex;
                             gap: 20px;
                             font-size: 18px;
-              
+                            justify-content: end;
+                            padding: 10px 0px;
+                            border-bottom:1px dashed rgba(202,208,219,0.7);
+                            border-bottom-left-radius: 10px;
+
+                            p{
+                                margin-bottom: 0px !important;
+                            }
+                            .passenger-name{
+                                font-weight: 500;
+                                color: #3d465c;
+                                display: none;
+                            }
+                            
+                        }
+    
+                        .surname-flex {
+                            display: flex;
+                            gap: 20px;
+
+                            .passenger-name{
+                                font-weight: 500;
+                                color: #3d465c;
+                            }
                         }
                     }
                 }
     
                 .shoppingSummary-container-box__list-surName {
                     display: flex;
+                    width: 100%;
     
                     .surname {
                         display: flex;
                         flex-direction: column;
+                        width: 100%;
                         font-size: 18px;
                         font-weight: 400;
-                        padding-inline: 10px;
-                        padding-top: 15px;
     
                         .passenger-name{
                             font-weight: 500;
                             color: #3d465c;
+                            display: none;
                         }
     
                         .surname-flex {
                             display: flex;
                             gap: 20px;
+                            padding: 10px 0px;
+                            border-bottom:1px dashed rgba(202,208,219,0.7);
+                            border-bottom-right-radius: 10px;
+                            p{
+                                margin-bottom: 0px !important;
+                            }
                         }
                     }
                 }
