--- a/src/components/chairScreen/index.scss
+++ b/src/components/chairScreen/index.scss
@@ -1,346 +1,229 @@
-// Import any global styles or reset here if needed
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 
-// Component-specific styles for ChairScreen
-.chairScreen-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: green;
-    height: 100%;
-    padding: 60px;
 
     .chairScreen-container-content {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: rgb(0, 255, 204);
+        
+        font-family: "Poppins", sans-serif;
+        background: white;
         position: relative;
         top: 200px;
-
-        .flapleft {
-            transform: scaleX(-1);
-        }
-
-        .chairScreen-container__box {
+    
+        .upper_div{
             display: flex;
-            flex-direction: column;
-            background: black;
-            padding: 20px;
-            position: relative;
+            gap: 540px;
+            margin-left: 310px;
+            color: rgb(44, 56, 85);
 
-            clip-path: polygon(50% 0%, 0 100px, 0 100%, 100% 100%, 100% 100px);
+            button{
+                color: white;
+                padding: 10px 20px;
+                background-color: rgb(44, 56, 85);
+                border-radius: 8px;
+                border: none;
+                cursor: pointer;
+                transition: 0.3s;
+                &:hover{   
+                    background-color: rgb(83, 106, 160);
+                }
+            }
+           
+        }
 
-            .chairScreen-container__box__plane {
-                background: red;
-                border-radius: 50%;
+        .line_horizontal {
+            position: absolute;
+            left: 0;
+            margin-top: 50px;
+            transform: translateY(-50%);
+            width: 100%;
+            height: 1px; 
+            background-color: black; 
+          }
+
+        
+
+        .middle_div{
+            display: grid;
+            gap: 1500px;
+
+
+            .plane_top_view{
+                margin-top: 150px;
+                
+                width: 900px;
+                height: 1800px;
+                display: inline-block;
                 position: relative;
-                clip-path: ellipse(100px 50px at 50% 0);
+                left: 0;
+                box-shadow: 0 0 15px rgba(0,0,0,0.25);
+                clip-path: inset(0px -15px 0px 0px);
+                border: none;
+                
+            
             }
 
-            .chairScreen-container__box-passengerSide-first {
-                display: flex;
-                flex-direction: column;
-                margin-top: 330px;
-                gap: 10px;
-
-                h3 {
-                    color: wheat;
-                }
-
-                p {
-                    color: wheat;
-                }
-
-                .first-seat {
+            
+            .legend{
+                
+                position: absolute;
+                top: 500px;
+                left: 70px;
+               
+        
+                .legend_item{
                     display: flex;
-
-                    .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: #ccc;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-weight: bold;
-                        font-size: 14px;
-                        cursor: pointer;
-
-                        &:nth-child(3) {
-                            margin-right: 40px;
-                        }
+                    gap: 10px;
+                    margin-bottom: 25px;
+                    
+                    .legend_box_taken{
+                        width: 15px;
+                        height: 15px;
+                        border-radius: 100%;
+                        background-color: rgb(44, 56, 85);
                     }
-                }
-            }
-
-            .chairScreen-container__box-passengerSide-second {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-
-                h3 {
-                    color: wheat;
-                }
-
-                p {
-                    color: white;
-                }
-
-                .second-seat {
-                    display: flex;
-                    flex-direction: column;
-
-                    .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: #ccc;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-weight: bold;
-                        font-size: 14px;
-                        cursor: pointer;
+                    .legend_box_selected{
+                        width: 15px;
+                        height: 15px;
+                        border-radius: 100%;
+                        background-color: rgb(83, 106, 160);
                     }
-
-                    .seat-gap {
-                        margin-right: 40px;
-                    }
-
-                    .seat-row {
-                        display: flex;
-                        flex-direction: row;
+                    .legend_box_empty{
+                        width: 15px;
+                        height: 15px;
+                        border-radius: 100%;
+                        background-color: rgb(240, 105, 60);
                     }
                 }
             }
 
-            .chairScreen-container__box-passengerSide-third {
+
+            .chairScreen-container__box {
+           
+                position: absolute;
+                left: 340px;
+                top: 420px;
+                z-index: 1;
+                background-color: #f6f6f7;
+                padding: 5px;
+                color: #FFFFFF;
+                font-weight: bold;
+                width: 218px;
+                height: 1128px;
+            
+                     
+                     
+         
+                     .chairScreen-container__box-passengerSide-first {
+                         display: flex;
+                         flex-direction: column;
+                         margin-top: 20px;
+                         gap: 10px;
+         
+                         
+                     }
+         
+                     .chairScreen-container__box-passengerSide-second {
+                         display: flex;
+                         flex-direction: column;
+                         gap: 10px;
+         
+                         h3 {
+                             color: wheat;
+                         }
+         
+                         p {
+                             color: white;
+                         }
+         
+                         .second-seat {
+                             display: flex;
+                             flex-direction: column;
+         
+                             .seat {
+                                 width: 30px;
+                                 height: 35px;
+                                 margin: 6px 4px;
+                                 background-color: #ccc;
+                                 display: flex;
+                                 justify-content: center;
+                                 align-items: center;
+                                 font-weight: bold;
+                                 font-size: 14px;
+                                 cursor: pointer;
+                                 border-radius: 15%;
+                                 &:hover{
+                                     background-color: rgb(255, 64, 0);
+                                 }
+                             }
+         
+                             .seat-gap {
+                                 margin-right: 30px;
+                             }
+         
+                             .seat-row {
+                                 display: flex;
+                                 flex-direction: row;
+                             }
+                         }
+                     }
+         
+                  
+                 }
+
+
+
+            
+            .info_box_group{
+                position: absolute;
+                width: 37%;
+                height: 1800px;
+                top:190px;
+                left: 905px;
                 display: flex;
                 flex-direction: column;
-                gap: 10px;
+           
 
-                h3 {
-                    color: wheat;
-                }
-
-                p {
-                    color: white;
-                }
-
-                .third-seat {
-                    display: flex;
-                    flex-direction: column;
-
-                    .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: #ccc;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-weight: bold;
-                        font-size: 14px;
-                        cursor: pointer;
+                .info_box{
+                    height: 500px;
+                    margin: 40px;
+                    background-color: rgb(205, 205, 205, 0.7);
+                    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+                    border-radius: 5%;
+                    transition: 0.3s;
+                    &:hover{
+                    background-color: #ccc;
                     }
 
-                    .seat-gap-third {
-                        margin-right: 40px;
+                    h2{
+                        padding-top: 20px;
+                    }
+                    p{
+                        padding: 30px;
                     }
 
-                    .seat-row {
-                        display: flex;
-                        flex-direction: row;
-                    }
                 }
+                
             }
+        }
 
-            .chairScreen-container__box-passengerSide-fourth {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-
-                h3 {
-                    color: wheat;
-                }
-
-                p {
-                    color: wheat;
-                }
-
-                .fourth-seat {
-                    display: flex;
-
-                    .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: #ccc;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-weight: bold;
-                        font-size: 14px;
-                        cursor: pointer;
-
-                        &:nth-child(3) {
-                            margin-right: 40px;
-                        }
-                    }
-                }
-            }
-
-            .chairScreen-container__box-passengerSide-fifth {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-
-                h3 {
-                    color: wheat;
-                }
-
-                p {
-                    color: wheat;
-                }
-
-                .fifth-seat {
-                    display: flex;
-
-                    .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: #ccc;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-weight: bold;
-                        font-size: 14px;
-                        cursor: pointer;
-
-                        &:nth-child(3) {
-                            margin-right: 40px;
-                        }
-                    }
-                }
-            }
-
-            .chairScreen-container__box-passengerSide-sixth {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-
-                h3 {
-                    color: wheat;
-                }
-
-                p {
-                    color: white;
-                }
-
-                .sixth-seat {
-                    display: flex;
-                    flex-direction: column;
-
-                    .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: #ccc;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-weight: bold;
-                        font-size: 14px;
-                        cursor: pointer;
-                    }
-
-                    .seat-gap-sixth {
-                        margin-right: 40px;
-                    }
-
-                    .seat-row {
-                        display: flex;
-                        flex-direction: row;
-                    }
-                }
-            }
-
-            .chairScreen-container__box-passengerSide-seventh {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-
-                h3 {
-                    color: wheat;
-                }
-
-                p {
-                    color: wheat;
-                }
-
-                .seventh-seat {
-                    display: flex;
-
-                    .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: #ccc;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-weight: bold;
-                        font-size: 14px;
-                        cursor: pointer;
-
-                        &:nth-child(3) {
-                            margin-right: 40px;
-                        }
-                    }
-                }
-            }
-
-            .chairScreen-container__box-passengerSide-eighth {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-
-                h3 {
-                    color: wheat;
-                }
-
-                p {
-                    color: white;
-                }
-
-                .eighth-seat {
-                    display: flex;
-                    flex-direction: column;
-
-                    .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: #ccc;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-weight: bold;
-                        font-size: 14px;
-                        cursor: pointer;
-                    }
-
-                    .seat-gap-eighth {
-                        margin-right: 40px;
-                    }
-
-                    .seat-row {
-                        display: flex;
-                        flex-direction: row;
-                    }
+        .lower_div{
+            button{
+                margin-top: 200px;
+                margin-left: 900px;
+                padding: 10px 20px;
+                color: white;
+                background-color: rgb(44, 56, 85);
+                border-radius: 8px;
+                border: none;
+                cursor: pointer;
+                transition: 0.3s;
+                &:hover{   
+                    background-color: rgb(83, 106, 160);
                 }
             }
         }
+
     }
+
+.footer{
+    margin-top: 300px;
 }
